src/dock.styl
@charset "UTF-8"

div, a
  user-select none
  color white
  text-decoration none

#dock
  position fixed
  bottom 0px
  width 100%
  left calc(50% - 1em)
  transform translateX(-50%)
  text-align center
  transition .3s ease
  &.hidden
    bottom -100px
  li
    list-style-type none
    display inline-block
    position relative
    &:hover
      & + li
        .icon
          transform scale(1.5)
          margin 0 1em
      .label
        display block
    .label
      display none
      position absolute
      bottom 6.5rem
      left 0
      width 100%
      line-height 2rem
      background-color rgba(0, 0, 0, 0.8)
      padding 4px 0
      border-radius 7px
  .icon
    font-size 3rem
    width 3rem
    height 3rem
    padding 0 0.3rem
    transform-origin 50% 100%
    filter: drop-shadow(2px 2px 2px black)
    transition all .3s ease
    &:hover
      transform scale(2)
      margin 0 1.5em

#profile
  position absolute
  left 2rem
  bottom 2rem
  width 80px
  height 80px
  background-image url("media/profile.png")
  background-size cover
  background-position center
  border-radius 50%
  filter opacity(0.5) grayscale(0.5)
  transition all .2s ease
  &:hover
    filter none
    transform scale(1.08)
    &::after
      content "Vue Résumé"
  &::after
    position relative
    left 96px
    top 1rem
    white-space pre-wrap
    content "Bryce Tsao\Ahi@bry.cat"

